--- a/app/Team.html
+++ b/app/Team.html
@@ -30,15 +30,413 @@
 	<header></header>
     <main id="top">
 		<article>
-			<h1> Team </h1>
+			<h1> TEAM MEMBERS </h1>
 
-			<p> This page should contain: </p>
-			<ul> 
-				<li> Include pictures of your teammates, don't forget instructors and advisors! </li>
-				<li> You can add a small biography or few words from each team member, to tell us what you like, and what motivated you to participate in iGEM. </li>
-				<li> Take team pictures! Show us your school, your lab and a little bit of your city. </li>
-				<li> Remember that image galleries can help you showcase many pictures while saving space. </li>
-			</ul>
+			<div class="labsubteam">
+				LAB & DESIGN
+			</div>
+
+			<div class="accordion">
+				<div class="row">
+					<div class="col">
+						<img id='teammate' src='/images/pic.png' onmouseover="this.src='/images/sillypic.png';" onmouseout="this.src='/images/pic.png';"/>
+					</div>
+					<div class="col">
+						<img id='teammate' src='/images/pic.png' onmouseover="this.src='/images/sillypic.png';" onmouseout="this.src='/images/pic.png';"/>
+					</div>
+					<div class="col">
+						<img id='teammate' src='/images/pic.png' onmouseover="this.src='/images/sillypic.png';" onmouseout="this.src='/images/pic.png';"/>
+					</div>
+					<div class="col">
+						<img id='teammate' src='/images/pic.png' onmouseover="this.src='/images/sillypic.png';" onmouseout="this.src='/images/pic.png';"/>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col teaminfo">
+						<strong> Name </strong> <br>
+						Year, Program <br>
+						Role
+					</div>
+					<div class="col teaminfo">
+						<strong> Name </strong> <br>
+						Year, Program <br>
+						Role
+					</div>
+					<div class="col teaminfo">
+						<strong> Name </strong> <br>
+						Year, Program <br>
+						Role
+					</div>
+					<div class="col teaminfo">
+						<strong> Name </strong> <br>
+						Year, Program <br>
+						Role
+					</div>
+				</div>
+			</div>
+
+			<div class="panel">
+				<div class="col teaminfo">
+					<strong> Fun fact about yourself? </strong> <br><br>
+					I like to eat waffles with sugar and strawberries. <br> <br>
+					<strong> What's something interesting you've learned through working on this project?  </strong> <br><br>
+					I learned the importance of communication with team members while working remotely.
+				</div>
+				<div class="col teaminfo">
+					<strong> Fun fact about yourself? </strong> <br><br>
+					I like to eat waffles with sugar and strawberries. <br> <br>
+					<strong> What's something interesting you've learned through working on this project?  </strong> <br><br>
+					I learned the importance of communication with team members while working remotely.
+				</div>
+				<div class="col teaminfo">
+					<strong> Fun fact about yourself? </strong> <br><br>
+					I like to eat waffles with sugar and strawberries. <br> <br>
+					<strong> What's something interesting you've learned through working on this project?  </strong> <br><br>
+					I learned the importance of communication with team members while working remotely.
+				</div>
+				<div class="col teaminfo">
+					<strong> Fun fact about yourself? </strong> <br><br>
+					I like to eat waffles with sugar and strawberries. <br> <br>
+					<strong> What's something interesting you've learned through working on this project?  </strong> <br><br>
+					I learned the importance of communication with team members while working remotely.
+				</div>
+			</div>
+
+
+
+			<div class="accordion">
+				<div class="row">
+					<div class="col">
+						<img id='teammate' src='/images/pic.png' onmouseover="this.src='/images/sillypic.png';" onmouseout="this.src='/images/pic.png';"/>
+					</div>
+					<div class="col">
+						<img id='teammate' src='/images/pic.png' onmouseover="this.src='/images/sillypic.png';" onmouseout="this.src='/images/pic.png';"/>
+					</div>
+					<div class="col">
+						<img id='teammate' src='/images/pic.png' onmouseover="this.src='/images/sillypic.png';" onmouseout="this.src='/images/pic.png';"/>
+					</div>
+					<div class="col">
+						<img id='teammate' src='/images/pic.png' onmouseover="this.src='/images/sillypic.png';" onmouseout="this.src='/images/pic.png';"/>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col teaminfo">
+						<strong> Name </strong> <br>
+						Year, Program <br>
+						Role
+					</div>
+					<div class="col teaminfo">
+						<strong> Name </strong> <br>
+						Year, Program <br>
+						Role
+					</div>
+					<div class="col teaminfo">
+						<strong> Name </strong> <br>
+						Year, Program <br>
+						Role
+					</div>
+					<div class="col teaminfo">
+						<strong> Name </strong> <br>
+						Year, Program <br>
+						Role
+					</div>
+				</div>
+			</div>
+			<div class="panel">
+				<div class="col teaminfo">
+					<strong> Fun fact about yourself? </strong> <br><br>
+					I like to eat waffles with sugar and strawberries. <br> <br>
+					<strong> What's something interesting you've learned through working on this project?  </strong> <br><br>
+					I learned the importance of communication with team members while working remotely.
+				</div>
+				<div class="col teaminfo">
+					<strong> Fun fact about yourself? </strong> <br><br>
+					I like to eat waffles with sugar and strawberries. <br> <br>
+					<strong> What's something interesting you've learned through working on this project?  </strong> <br><br>
+					I learned the importance of communication with team members while working remotely.
+				</div>
+				<div class="col teaminfo">
+					<strong> Fun fact about yourself? </strong> <br><br>
+					I like to eat waffles with sugar and strawberries. <br> <br>
+					<strong> What's something interesting you've learned through working on this project?  </strong> <br><br>
+					I learned the importance of communication with team members while working remotely.
+				</div>
+				<div class="col teaminfo">
+					<strong> Fun fact about yourself? </strong> <br><br>
+					I like to eat waffles with sugar and strawberries. <br> <br>
+					<strong> What's something interesting you've learned through working on this project?  </strong> <br><br>
+					I learned the importance of communication with team members while working remotely.
+				</div>
+			</div>
+
+			<div class="humansubteam">
+				HUMAN PRACTICES
+			</div>
+
+			<div class="accordion">
+				<div class="row">
+					<div class="col">
+						<img id='teammate' src='/images/pic.png' onmouseover="this.src='/images/sillypic.png';" onmouseout="this.src='/images/pic.png';"/>
+					</div>
+					<div class="col">
+						<img id='teammate' src='/images/pic.png' onmouseover="this.src='/images/sillypic.png';" onmouseout="this.src='/images/pic.png';"/>
+					</div>
+					<div class="col">
+						<img id='teammate' src='/images/pic.png' onmouseover="this.src='/images/sillypic.png';" onmouseout="this.src='/images/pic.png';"/>
+					</div>
+					<div class="col">
+						<img id='teammate' src='/images/pic.png' onmouseover="this.src='/images/sillypic.png';" onmouseout="this.src='/images/pic.png';"/>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col teaminfo">
+						<strong> Name </strong> <br>
+						Year, Program <br>
+						Role
+					</div>
+					<div class="col teaminfo">
+						<strong> Name </strong> <br>
+						Year, Program <br>
+						Role
+					</div>
+					<div class="col teaminfo">
+						<strong> Name </strong> <br>
+						Year, Program <br>
+						Role
+					</div>
+					<div class="col teaminfo">
+						<strong> Name </strong> <br>
+						Year, Program <br>
+						Role
+					</div>
+				</div>
+			</div>
+			<div class="panel">
+				<div class="col teaminfo">
+					<strong> Fun fact about yourself? </strong> <br><br>
+					I like to eat waffles with sugar and strawberries. <br> <br>
+					<strong> What's something interesting you've learned through working on this project?  </strong> <br><br>
+					I learned the importance of communication with team members while working remotely.
+				</div>
+				<div class="col teaminfo">
+					<strong> Fun fact about yourself? </strong> <br><br>
+					I like to eat waffles with sugar and strawberries. <br> <br>
+					<strong> What's something interesting you've learned through working on this project?  </strong> <br><br>
+					I learned the importance of communication with team members while working remotely.
+				</div>
+				<div class="col teaminfo">
+					<strong> Fun fact about yourself? </strong> <br><br>
+					I like to eat waffles with sugar and strawberries. <br> <br>
+					<strong> What's something interesting you've learned through working on this project?  </strong> <br><br>
+					I learned the importance of communication with team members while working remotely.
+				</div>
+				<div class="col teaminfo">
+					<strong> Fun fact about yourself? </strong> <br><br>
+					I like to eat waffles with sugar and strawberries. <br> <br>
+					<strong> What's something interesting you've learned through working on this project?  </strong> <br><br>
+					I learned the importance of communication with team members while working remotely.
+				</div>
+			</div>
+
+			<div class="accordion">
+				<div class="row">
+					<div class="col">
+						<img id='teammate' src='/images/pic.png' onmouseover="this.src='/images/sillypic.png';" onmouseout="this.src='/images/pic.png';"/>
+					</div>
+					<div class="col">
+						<img id='teammate' src='/images/pic.png' onmouseover="this.src='/images/sillypic.png';" onmouseout="this.src='/images/pic.png';"/>
+					</div>
+					<div class="col">
+						<img id='teammate' src='/images/pic.png' onmouseover="this.src='/images/sillypic.png';" onmouseout="this.src='/images/pic.png';"/>
+					</div>
+					<div class="col">
+						<img id='teammate' src='/images/pic.png' onmouseover="this.src='/images/sillypic.png';" onmouseout="this.src='/images/pic.png';"/>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col teaminfo">
+						<strong> Name </strong> <br>
+						Year, Program <br>
+						Role
+					</div>
+					<div class="col teaminfo">
+						<strong> Name </strong> <br>
+						Year, Program <br>
+						Role
+					</div>
+					<div class="col teaminfo">
+						<strong> Name </strong> <br>
+						Year, Program <br>
+						Role
+					</div>
+					<div class="col teaminfo">
+						<strong> Name </strong> <br>
+						Year, Program <br>
+						Role
+					</div>
+				</div>
+			</div>
+			<div class="panel">
+				<div class="col teaminfo">
+					<strong> Fun fact about yourself? </strong> <br><br>
+					I like to eat waffles with sugar and strawberries. <br> <br>
+					<strong> What's something interesting you've learned through working on this project?  </strong> <br><br>
+					I learned the importance of communication with team members while working remotely.
+				</div>
+				<div class="col teaminfo">
+					<strong> Fun fact about yourself? </strong> <br><br>
+					I like to eat waffles with sugar and strawberries. <br> <br>
+					<strong> What's something interesting you've learned through working on this project?  </strong> <br><br>
+					I learned the importance of communication with team members while working remotely.
+				</div>
+				<div class="col teaminfo">
+					<strong> Fun fact about yourself? </strong> <br><br>
+					I like to eat waffles with sugar and strawberries. <br> <br>
+					<strong> What's something interesting you've learned through working on this project?  </strong> <br><br>
+					I learned the importance of communication with team members while working remotely.
+				</div>
+				<div class="col teaminfo">
+					<strong> Fun fact about yourself? </strong> <br><br>
+					I like to eat waffles with sugar and strawberries. <br> <br>
+					<strong> What's something interesting you've learned through working on this project?  </strong> <br><br>
+					I learned the importance of communication with team members while working remotely.
+				</div>
+			</div>
+
+			<div class="mathsubteam">
+				MATH & MODELLING
+			</div>
+
+			<div class="accordion">
+				<div class="row">
+					<div class="col">
+						<img id='teammate' src='/images/pic.png' onmouseover="this.src='/images/sillypic.png';" onmouseout="this.src='/images/pic.png';"/>
+					</div>
+					<div class="col">
+						<img id='teammate' src='/images/pic.png' onmouseover="this.src='/images/sillypic.png';" onmouseout="this.src='/images/pic.png';"/>
+					</div>
+					<div class="col">
+						<img id='teammate' src='/images/pic.png' onmouseover="this.src='/images/sillypic.png';" onmouseout="this.src='/images/pic.png';"/>
+					</div>
+					<div class="col">
+						<img id='teammate' src='/images/pic.png' onmouseover="this.src='/images/sillypic.png';" onmouseout="this.src='/images/pic.png';"/>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col teaminfo">
+						<strong> Name </strong> <br>
+						Year, Program <br>
+						Role
+					</div>
+					<div class="col teaminfo">
+						<strong> Name </strong> <br>
+						Year, Program <br>
+						Role
+					</div>
+					<div class="col teaminfo">
+						<strong> Name </strong> <br>
+						Year, Program <br>
+						Role
+					</div>
+					<div class="col teaminfo">
+						<strong> Name </strong> <br>
+						Year, Program <br>
+						Role
+					</div>
+				</div>
+			</div>
+			<div class="panel">
+				<div class="col teaminfo">
+					<strong> Fun fact about yourself? </strong> <br><br>
+					I like to eat waffles with sugar and strawberries. <br> <br>
+					<strong> What's something interesting you've learned through working on this project?  </strong> <br><br>
+					I learned the importance of communication with team members while working remotely.
+				</div>
+				<div class="col teaminfo">
+					<strong> Fun fact about yourself? </strong> <br><br>
+					I like to eat waffles with sugar and strawberries. <br> <br>
+					<strong> What's something interesting you've learned through working on this project?  </strong> <br><br>
+					I learned the importance of communication with team members while working remotely.
+				</div>
+				<div class="col teaminfo">
+					<strong> Fun fact about yourself? </strong> <br><br>
+					I like to eat waffles with sugar and strawberries. <br> <br>
+					<strong> What's something interesting you've learned through working on this project?  </strong> <br><br>
+					I learned the importance of communication with team members while working remotely.
+				</div>
+				<div class="col teaminfo">
+					<strong> Fun fact about yourself? </strong> <br><br>
+					I like to eat waffles with sugar and strawberries. <br> <br>
+					<strong> What's something interesting you've learned through working on this project?  </strong> <br><br>
+					I learned the importance of communication with team members while working remotely.
+				</div>
+			</div>
+
+
+			<div class="accordion">
+				<div class="row">
+					<div class="col">
+						<img id='teammate' src='/images/pic.png' onmouseover="this.src='/images/sillypic.png';" onmouseout="this.src='/images/pic.png';"/>
+					</div>
+					<div class="col">
+						<img id='teammate' src='/images/pic.png' onmouseover="this.src='/images/sillypic.png';" onmouseout="this.src='/images/pic.png';"/>
+					</div>
+					<div class="col">
+						<img id='teammate' src='/images/pic.png' onmouseover="this.src='/images/sillypic.png';" onmouseout="this.src='/images/pic.png';"/>
+					</div>
+					<div class="col">
+						<img id='teammate' src='/images/pic.png' onmouseover="this.src='/images/sillypic.png';" onmouseout="this.src='/images/pic.png';"/>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col teaminfo">
+						<strong> Name </strong> <br>
+						Year, Program <br>
+						Role
+					</div>
+					<div class="col teaminfo">
+						<strong> Name </strong> <br>
+						Year, Program <br>
+						Role
+					</div>
+					<div class="col teaminfo">
+						<strong> Name </strong> <br>
+						Year, Program <br>
+						Role
+					</div>
+					<div class="col teaminfo">
+						<strong> Name </strong> <br>
+						Year, Program <br>
+						Role
+					</div>
+				</div>
+			</div>
+			<div class="panel">
+				<div class="col teaminfo">
+					<strong> Fun fact about yourself? </strong> <br><br>
+					I like to eat waffles with sugar and strawberries. <br> <br>
+					<strong> What's something interesting you've learned through working on this project?  </strong> <br><br>
+					I learned the importance of communication with team members while working remotely.
+				</div>
+				<div class="col teaminfo">
+					<strong> Fun fact about yourself? </strong> <br><br>
+					I like to eat waffles with sugar and strawberries. <br> <br>
+					<strong> What's something interesting you've learned through working on this project?  </strong> <br><br>
+					I learned the importance of communication with team members while working remotely.
+				</div>
+				<div class="col teaminfo">
+					<strong> Fun fact about yourself? </strong> <br><br>
+					I like to eat waffles with sugar and strawberries. <br> <br>
+					<strong> What's something interesting you've learned through working on this project?  </strong> <br><br>
+					I learned the importance of communication with team members while working remotely.
+				</div>
+				<div class="col teaminfo">
+					<strong> Fun fact about yourself? </strong> <br><br>
+					I like to eat waffles with sugar and strawberries. <br> <br>
+					<strong> What's something interesting you've learned through working on this project?  </strong> <br><br>
+					I learned the importance of communication with team members while working remotely.
+				</div>
+			</div>
 		</article>
     </main>
   <footer></footer>
