clean up navbar, add team member info

--- a/app/Engineering.html
+++ b/app/Engineering.html
@@ -30,11 +30,20 @@
 	<header></header>
     <main id="top">
 		<article>
-			<h1> Basic Part </h1>
+			<h1> ENGINEERING </h1>
 
-			<p> A basic part is a functional unit of DNA that cannot be subdivided into smaller component parts. BBa_R0051 is an example of a basic part, a promoter regulated by lambda cl. </p>
+			<p> Design is the first step in the design-build-test cycle in engineering and synthetic biology. Use this page to describe the process that you used in the design of your parts. You should clearly explain the engineering principles used to design your project.
 
-			<p> Most genetically-encoded functions have not yet been converted to BioBrick parts. Thus, there are many opportunities to find new, cool, and important genetically encoded functions, and refine and convert the DNA encoding these functions into BioBrick standard biological parts. </p>
+			This page is different to the "Applied Design Award" page. Please see the Applied Design page for more information on how to compete for that award. </p>
+
+			<p> This page should contain: </p>
+
+			<ul> 
+				<li> Clear and concise description of the project. </li>
+				<li> A description of why your team chose to pursue this project. </li>
+				<li> References and sources (citations). </li>
+				<li> Visuals to supplement your project description. </li>
+			</ul>
 		</article>
     </main>
   <footer></footer>
