--- a/app/Implementation.html
+++ b/app/Implementation.html
@@ -30,11 +30,17 @@
 	<header></header>
     <main id="top">
 		<article>
-			<h1> Part Collection </h1>
+			<h1> IMPLEMENTATION </h1>
 
-			<p> Did your team make a lot of great parts? Is there a theme that ties all your parts together? Do you have more than 10 parts in this collection? Did you make a CRISPR collection, a MoClo collection, or a collection of awesome pigment parts? Describe your parts collection on this page, so the judges can evaluate you for the Best Part Collection award. </p>
+			<p> Document the dates you worked on your project. This should be a detailed account of the work done each day for your project. </p>
 
-			<p> While you should put all the characterization information for your parts on the Registry, you are encouraged to explain how all your parts form a collection on this page. </p>
+			<p> This page should contain: </p>
+			<ul>
+				<li> Chronological notes of what your team is doing. </li>
+				<li> Brief descriptions of daily important events. </li>
+				<li> Pictures of your progress. </li>
+				<li> Mention who participated in what task. </li>
+			</ul>
 		</article>
     </main>
   <footer></footer>
