--- a/app/Improvement.html
+++ b/app/Improvement.html
@@ -30,20 +30,12 @@
 	<header></header>
     <main id="top">
 		<article>
-			<h1> Design </h1>
+			<h1> IMPROVEMENT </h1>
 
-			<p> Design is the first step in the design-build-test cycle in engineering and synthetic biology. Use this page to describe the process that you used in the design of your parts. You should clearly explain the engineering principles used to design your project.
+			<p> A composite part is a functional unit of DNA consisting of two or more basic parts assembled together. BBa_I13507 is an example of a composite part, consisting of an RBS, a protein coding region for a red fluorescent protein, and a terminator. </p>
 
-			This page is different to the "Applied Design Award" page. Please see the Applied Design page for more information on how to compete for that award. </p>
+			<p> New composite BioBrick devices can be made by combining existing BioBrick Parts (like Inverters, Amplifiers, Smell Generators, Protein Balloon Generators, Senders, Receivers, Actuators, and so on). </p>
 
-			<p> This page should contain: </p>
-
-			<ul> 
-				<li> Clear and concise description of the project. </li>
-				<li> A description of why your team chose to pursue this project. </li>
-				<li> References and sources (citations). </li>
-				<li> Visuals to supplement your project description. </li>
-			</ul>
 		</article>
     </main>
   <footer></footer>
