--- a/app/Partnership.html
+++ b/app/Partnership.html
@@ -30,14 +30,11 @@
 	<header></header>
     <main id="top">
 		<article>
-			<h1> InterLab </h1>
+			<h1> Collaborations </h1>
 
-			<p> Bronze Medal Criterion #4 </p>
+			<p> Sharing and collaboration are core values of iGEM. We encourage you to reach out and work with other teams on difficult problems that you can more easily solve together.</p>
 
-			<p> Standard Tracks: Participate in the Interlab Measurement </p> 
-
-			<p> Study and/or obtain new, high quality experimental characterization data for an existing BioBrick Part or Device and enter this information on that part's Main Page in the Registry. The part that you are characterizing must NOT be from a 2018 part number range. </p> 
-
+			<p> This is a Silver Medal Criterion #2. You can work with any other team in the competition, including software, hardware, high school and other tracks. You can also work with non-iGEM research groups, but they do not count towards the iGEM team collaboration silver medal criterion. </p>
 		</article>
     </main>
   <footer></footer>
