--- a/app/Parts.html
+++ b/app/Parts.html
@@ -30,7 +30,7 @@
 	<header></header>
     <main id="top">
 		<article>
-			<h1> Parts </h1>
+			<h1> PARTS </h1>
 
 			<p> Each team will make new parts during iGEM and will submit them to the Registry of Standard Biological Parts. The iGEM software provides an easy way to present the parts your team has created. </p>
 
