--- a/app/Proof_Of_Concept.html
+++ b/app/Proof_Of_Concept.html
@@ -30,17 +30,11 @@
 	<header></header>
     <main id="top">
 		<article>
-			<h1> Notebook </h1>
+			<h1> PROOF OF CONCEPT </h1>
 
-			<p> Document the dates you worked on your project. This should be a detailed account of the work done each day for your project. </p>
+			<p> Teams that can show their system working under real world conditions are usually good at impressing the judges in iGEM. To achieve gold medal criterion #4, convince the judges that your project works. There are many ways in which your project working could be demonstrated, so there is more than one way to meet this requirement. This gold medal criterion was introduced in 2016, so check our what 2016 teams did to achieve their gold medals! </p>
 
-			<p> This page should contain: </p>
-			<ul>
-				<li> Chronological notes of what your team is doing. </li>
-				<li> Brief descriptions of daily important events. </li>
-				<li> Pictures of your progress. </li>
-				<li> Mention who participated in what task. </li>
-			</ul>
+			<p> This is a gold medal criterion. </p>
 		</article>
     </main>
   <footer></footer>
