--- a/app/index.html
+++ b/app/index.html
@@ -30,9 +30,7 @@
   <header></header>
     <main id="top">
     <article>
-      <h1> Index </h1>
-
-      <img src='/images/success_baby.jpg'>
+      <h1> HOME </h1>
 
       <p> Congratulations! You've successfully installed the basic wiki template, and ran your first server with igem-wikibrick. </p>
 
