--- a/app/Contribution.html
+++ b/app/Contribution.html
@@ -30,13 +30,11 @@
 	<header></header>
     <main id="top">
 		<article>
-			<h1> Hardware </h1>
+			<h1> CONTRIBUTION </h1>
 
-			<p> iGEM is about making teams of students making synthetic biology projects. We encourage teams to work with parts and build biological devices in the lab. But we are inclusive and want all teams to work on many other types of problems in synbio. Robotic assembly, microfluidics, low cost equipment and measurement hardware are all areas ripe for innovation in synbio. </p>
+			<p> A basic part is a functional unit of DNA that cannot be subdivided into smaller component parts. BBa_R0051 is an example of a basic part, a promoter regulated by lambda cl. </p>
 
-			<p> Teams who are interested in working with hardware as a side project are encouraged to apply for the hardware award. </p>
-
-			<p> To compete for the Best Hardware prize, please describe your work on this page and also fill out the description on the judging form. </p>
+			<p> Most genetically-encoded functions have not yet been converted to BioBrick parts. Thus, there are many opportunities to find new, cool, and important genetically encoded functions, and refine and convert the DNA encoding these functions into BioBrick standard biological parts. </p>
 		</article>
     </main>
   <footer></footer>
