--- a/app/Description.html
+++ b/app/Description.html
@@ -30,11 +30,14 @@
 	<header></header>
     <main id="top">
 		<article>
-			<h1> Description </h1>
+			<h1> DESCRIPTION </h1>
 
-			<p> Talk about your project, describe what moves you and why this project is important for your team. </p>
+			<p> Design is the first step in the design-build-test cycle in engineering and synthetic biology. Use this page to describe the process that you used in the design of your parts. You should clearly explain the engineering principles used to design your project.
+
+			This page is different to the "Applied Design Award" page. Please see the Applied Design page for more information on how to compete for that award. </p>
 
 			<p> This page should contain: </p>
+
 			<ul> 
 				<li> Clear and concise description of the project. </li>
 				<li> A description of why your team chose to pursue this project. </li>
