--- a/app/Model.html
+++ b/app/Model.html
@@ -30,20 +30,15 @@
 	<header></header>
     <main id="top">
 		<article>
-			<h1> Model </h1>
+			<h1> MODEL </h1>
 
-			<p> Mathematical models and computer simulations provide a great way to describe the function and operation of BioBrick Parts and Devices. Synthetic Biology is an engineering discipline, and part of engineering is simulation and modeling to determine the behavior of your design before you build it. Designing and simulating can be iterated many times in a computer before moving to the lab. This award is for teams who build a model of their system and use it to inform system design or simulate expected behavior in conjunction with experiments in the wetlab. </p>
+			<p> For teams seeking to improve upon a previous part or project, you should document all of your work on this page. Please remember to include all part measurement and characterization data on the part page on the Registry. Please include a link to your improved part on this page. </p>
 
 			<p> Gold Medal Criterion </p>
 
-			<p> Convince the judges that your project's design and/or implementation is based on insight you have gained from modeling. This could be either a new model you develop or the implementation of a model from a previous team. You must thoroughly document your model's contribution to your project on your team's wiki, including assumptions, relevant data, model results, and a clear explanation of your model that anyone can understand. </p>
+			<p> Standard Tracks: Create a new part that has a functional improvement upon an existing BioBrick part. The sequences of the new and existing parts must be different. You must perform experiments with both parts to demonstrate this improvement. Document the experimental characterization on the Part's Main Page on the Registry for both the existing and new parts. Both the new and existing Main Page of each Part’s Registry entry must reference each other. Submit a sample of the new part to the Registry. The existing part must NOT be from your 2018 part number range and must be different from the part documented in bronze #4. </p>
 
-			<p> The model should impact your project design in a meaningful way. Modeling may include, but is not limited to, deterministic, exploratory, molecular dynamic, and stochastic models. Teams may also explore the physical modeling of a single component within a system or utilize mathematical modeling for predicting function of a more complex device. </p>
-
-			<p> Best Model Special Prize </p>
-
-			<p> To compete for the Best Model prize, please describe your work on this page and also fill out the description on the judging form. Please note you can compete for both the gold medal criterion #3 and the best model prize with this page. </p>
-
+			<p> Special Tracks: Improve the function of an existing iGEM project (that your current team did not originally create) and display your achievement on your wiki. </p>
 		</article>
     </main>
   <footer></footer>
