--- a/app/Description.html
+++ b/app/Description.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<script src="/dist/js/vendor.js"></script>
 	<link rel="stylesheet" href="/dist/css/vendor.css">
+	<link href="https://fonts.googleapis.com/css2?family=Nunito+Sans&display=swap" rel="stylesheet">
 	<script>
 		$(function() {
 			$('header').load('/templates/header.html');
@@ -44,6 +45,16 @@
 				<li> References and sources (citations). </li>
 				<li> Visuals to supplement your project description. </li>
 			</ul>
+			
+			<svg width="300" height="300" xmlns="http://www.w3.org/2000/svg">
+				<g>
+					<path id="pipe1" d="M 50 50
+					L 50 250
+					A 25 25 0 0 0 75 275
+					L 275 275" stroke="#4E58E6" stroke-width="25"/>
+				</g>
+			</svg>
+			
 		</article>
     </main>
   <footer></footer>
