--- a/app/Measurement.html
+++ b/app/Measurement.html
@@ -31,7 +31,7 @@
 	<header></header>
     <main id="top">
 		<article>
-			<h1> MODEL </h1>
+			<h1> MEASUREMENT </h1>
 
 			<p> For teams seeking to improve upon a previous part or project, you should document all of your work on this page. Please remember to include all part measurement and characterization data on the part page on the Registry. Please include a link to your improved part on this page. </p>
 
