--- a/app/Education.html
+++ b/app/Education.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<script src="/dist/js/vendor.js"></script>
 	<link rel="stylesheet" href="/dist/css/vendor.css">
+	<link href="https://fonts.googleapis.com/css2?family=Nunito+Sans&display=swap" rel="stylesheet">
 	<script>
 		$(function() {
 			$('header').load('/templates/header.html');
