--- a/app/Team.html
+++ b/app/Team.html
@@ -10,6 +10,7 @@
 		$(function() {
 			$('header').load('/templates/header.html');
 			$('footer').load('/templates/footer.html');
+			$('pipes').load('/templates/teamPipes.html');
 		});
 	</script>
 	<link rel="stylesheet" href="/css/styles.css">
@@ -25,6 +26,7 @@
 </script>   </head>
 
 <body>
+	<div class="topElement"></div>
 	<div id="igem-navbar-placeholder">
 		<p>Placeholder for iGEM Navbar</p>
 	</div>
@@ -32,32 +34,21 @@
     <main id="top">
 		<article>
 			<div class="pageHeader"> 
-				<h1> TEAM MEMBERS </h1>
-				<img src='/images/buildings.svg'>
+				<div class="headerCol">
+					<h1 class="teampage"> TEAM MEMBERS </h1>
+				</div> 
+				<div class="headerCol2">
+					<!--<img src='/images/buildings.svg'>-->
+				</div>
 			</div>
 
 			<div class="pipecol">
-				<svg width="209" height="3042" viewBox="0 0 209 3042" fill="none" xmlns="http://www.w3.org/2000/svg">
-					<path class='mathPipe' d="M121.773 1.50001L121.773 2983.41C121.773 2999.45 135.781 3012.2 150.937 3012.2H176.801V3032.11L150.943 3032H150.937C125.345 3032 104.5 3011.38 104.5 2983.19L104.5 1.50011L121.773 1.50001Z" fill="#5C889F" stroke="#C1D3DB" stroke-width="3"/>
-					<path class='mathPipe' d="M171.5 3005.5H176.989V3039.79H171.5V3005.5Z" fill="#5C889F" stroke="#C1D3DB" stroke-width="3"/>
-					<path class='mathPipe' d="M128.902 662.377L128.902 668.318L96.4999 668.318L96.4999 662.377L128.902 662.377Z" fill="#5C889F" stroke="#C1D3DB" stroke-width="3"/>
-					<path class='mathPipe' d="M128.902 1975.77L128.902 1981.71L96.4999 1981.71L96.4999 1975.77L128.902 1975.77Z" fill="#5C889F" stroke="#C1D3DB" stroke-width="3"/>
-					<path class='mathPipe' d="M128.902 2958.44L128.902 2964.38L96.4999 2964.38L96.4999 2958.44L128.902 2958.44Z" fill="#5C889F" stroke="#C1D3DB" stroke-width="3"/>
-					<path class='hpPipe' d="M56.4998 1538.13V1.5H73.7731V1508.25V1538.35C73.7731 1554.39 87.7813 1567.14 102.937 1567.14H173V1587.05L102.939 1586.94H102.937C77.3446 1586.94 56.4998 1566.32 56.4998 1538.13Z" fill="#5C889F" stroke="#C1D3DB" stroke-width="3"/>
-					<path class='hpPipe' d="M80.9021 1454.5L80.9021 1460.44L48.4999 1460.44L48.4999 1454.5L80.9021 1454.5Z" fill="#5C889F" stroke="#C1D3DB" stroke-width="3"/>
-					<path class='hpPipe' d="M80.9021 936.869L80.9021 942.81L48.4999 942.81L48.4999 936.869L80.9021 936.869Z" fill="#5C889F" stroke="#C1D3DB" stroke-width="3"/>
-					<path class='hpPipe' d="M171.5 1560.5H176.989V1594.79H171.5V1560.5Z" fill="#5C889F" stroke="#C1D3DB" stroke-width="3"/>
-					<path class='labPipe' d="M8.5 326.813V1.5H25.7733V327.037C25.7733 343.081 39.7816 355.829 54.9369 355.829H173.5V376.983L54.9541 375.628L54.9455 375.628H54.9369C29.3448 375.628 8.5 355.006 8.5 326.813Z" fill="#5C889F" stroke="#C1D3DB" stroke-width="3"/>
-					<path class='labPipe' d="M1.5 307.44L1.5 301.5H33.9022V307.44H1.5Z" fill="#5C889F" stroke="#C1D3DB" stroke-width="3"/>
-					<path class='labPipe' d="M172.5 349.5H177.989V383.787H172.5V349.5Z" fill="#5C889F" stroke="#C1D3DB" stroke-width="3"/>
-					<circle cx="197" cy="367" r="12" fill="#F79D5E"/>
-					<circle cx="197" cy="1577" r="12" fill="#F79D5E"/>
-					<circle cx="197" cy="3022" r="12" fill="#F79D5E"/>
-					</svg>					
+				<pipes></pipes>						
 			</div>
 
 			<div id="contentcol" class="contentcol">
 				<div class="overview">
+					Pir idegesos rener to tinen rune iehidovuk tibetel eyoboru, cihili peno hipi nisas igasawus perupon dunesid poke gasifiy sifa. Nat izirulo tirec loca icabiroc rihu tenip; asiesulal efo rilil racar eliesolum. So adolebiet nidopet aretece fatar ne hanuga ela aco, teha bi imi, moye soy eceliren va tacetir bobugi eres, se doda tir medoro eritaha de onila ewo nehaces miloval, ne rob esideqem lige: Onurag falare ademel rogosel niele?
 					Pir idegesos rener to tinen rune iehidovuk tibetel eyoboru, cihili peno hipi nisas igasawus perupon dunesid poke gasifiy sifa. Nat izirulo tirec loca icabiroc rihu tenip; asiesulal efo rilil racar eliesolum. So adolebiet nidopet aretece fatar ne hanuga ela aco, teha bi imi, moye soy eceliren va tacetir bobugi eres, se doda tir medoro eritaha de onila ewo nehaces miloval, ne rob esideqem lige: Onurag falare ademel rogosel niele?
 				</div>
 
