clean up description page more

--- a/app/Description.html
+++ b/app/Description.html
@@ -42,7 +42,7 @@
 			</div>
 
 			<div class="pipecol">
-				<svg width="227" height="3042" viewBox="0 0 227 3042" fill="none" xmlns="http://www.w3.org/2000/svg">
+				<svg width="227" height="3442" viewBox="0 0 227 3442" fill="none" overflow="visible" xmlns="http://www.w3.org/2000/svg">
 					<rect class="inspPipe" fill="#CDDCDD" fill-opacity="0" x="5" y="0" width="20" height="140"></rect>
 					<rect class="probPipe" fill="#CDDCDD" fill-opacity="0" x="50" y="0" width="20" height="110"></rect>
 					<rect class="solPipe" fill="#CDDCDD" fill-opacity="0" x="100" y="0" width="20" height="120"></rect>
