--- a/app/Team.html
+++ b/app/Team.html
@@ -234,7 +234,7 @@
 							<img id='teammate' src='/images/katiewalker.png'/>
 						</div>
 						<div class="col">
-							<img id='teammate' src='/images/lorenzopérez.png' onmouseover="this.src='/images/sillylorenzopérez.png';" onmouseout="this.src='/images/lorenzopérez.png';"/>
+							<img id='teammate' src='/images/lorenzoperez.png' onmouseover="this.src='/images/sillylorenzoperez.png';" onmouseout="this.src='/images/lorenzopérez.png';"/>
 						</div>
 						<div class="col">
 							<img id='teammate' src='/images/michaellam.png'/>
