--- a/app/Team.html
+++ b/app/Team.html
@@ -42,7 +42,7 @@
 			</div>
 
 			<div class="pipecol">
-				<svg width="227" height="3042" viewBox="0 0 227 3042" fill="none" xmlns="http://www.w3.org/2000/svg">
+				<svg width="227" height="3042" viewBox="0 0 227 3042" fill="none" overflow="visible" xmlns="http://www.w3.org/2000/svg">
 					<rect class="labPipe" fill="#CDDCDD" fill-opacity="0" x="5" y="0" width="20" height="150"></rect>
 					<rect class="hpPipe" fill="#CDDCDD" fill-opacity="0" x="50" y="0" width="20" height="200"></rect>
 					<rect class="mathPipe" fill="#CDDCDD" fill-opacity="0" x="100" y="0" width="20" height="210"></rect>
