--- a/app/Engineering.html
+++ b/app/Engineering.html
@@ -3,18 +3,18 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <script src="/dist/js/vendor.js"></script>
-  <link rel="stylesheet" href="/dist/css/vendor.css">
+  <script src="https://2020.igem.org/Template:Waterloo/js/vendor?action=raw&ctype=text/javascript"></script>
+	<link rel="stylesheet" href="https://2020.igem.org/Template:Waterloo/css/vendor?action=raw&ctype=text/css">
   <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans&display=swap" rel="stylesheet">
   <script>
     $(function() {
-      $('header').load('/templates/header.html');
-      $('footer').load('/templates/footer.html');
-      $('accessibility').load('/templates/accessibility.html');
+      $('header').load('https://2020.igem.org/Template:Waterloo/header?action=raw&ctype=text/javascript');
+			$('footer').load('https://2020.igem.org/Template:Waterloo/footer?action=raw&ctype=text/javascript');
+      $('accessibility').load('https://2020.igem.org/Template:Waterloo/accessibility?action=raw&ctype=text/javascript');
     });
   </script>
-  <link rel="stylesheet" href="/css/styles.css">
-  <script src="/js/wiki.js"></script>
+  <link rel="stylesheet" type="text/css" href="https://2020.igem.org/wiki/index.php?title=Template:Waterloo/css/styles&action=raw&ctype=text/css">
+	<script src="https://2020.igem.org/Template:Waterloo/js/wiki?action=raw&ctype=text/javascript"></script>
   <!--Added MathJax hack to make inline equations work-->
   <script type="text/x-mathjax-config">
     MathJax.Hub.Config({
