--- a/app/index.html
+++ b/app/index.html
@@ -3,17 +3,17 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<script src="/dist/js/vendor.js"></script>
-  	<link rel="stylesheet" href="/dist/css/vendor.css">
+	<script src="https://2020.igem.org/Template:Waterloo/js/vendor?action=raw&ctype=text/javascript"></script>
+  	<link rel="stylesheet" href="https://2020.igem.org/Template:Waterloo/css/vendor?action=raw&ctype=text/css">
   	<link href="https://fonts.googleapis.com/css2?family=Nunito+Sans&display=swap" rel="stylesheet">
 	<script>
 		$(function() {
-			$('header').load('/templates/header.html');
-			$('footer').load('/templates/footer.html');
+			$('header').load('https://2020.igem.org/Template:Waterloo/header?action=raw&ctype=text/javascript');
+			$('footer').load('https://2020.igem.org/Template:Waterloo/footer?action=raw&ctype=text/javascript');
 		});
 	</script>
-	<link rel="stylesheet" href="/css/styles.css">
-	<script src="/js/wiki.js"></script>
+	<link rel="stylesheet" type="text/css" href="https://2020.igem.org/wiki/index.php?title=Template:Waterloo/css/styles&action=raw&ctype=text/css">
+	<script src="https://2020.igem.org/Template:Waterloo/js/wiki?action=raw&ctype=text/javascript"></script>
 	<!--Added MathJax hack to make inline equations work-->
 	<script type="text/x-mathjax-config">
 		MathJax.Hub.Config({
@@ -42,7 +42,7 @@
 		<p class="hp6">The wastewater is now metal-free and ready to be discharged safely into the environment. </p>
 		<p class="hp7">By then breaking the bond between the protein and the metal ion, REMINE can produce a pure concentrated metal solution that can be re-used in the industry.</p>
 		<h1 class="interested">Interested in our project?</h1>
-        <div onclick="location.href='/Description.html';" id="learnmore">
+        <div onclick="location.href='http://2020.igem.org/Team:Waterloo/Description';" id="learnmore">
 			<img src="/images/learnmore.svg">
 			<div class="centered">Learn More</div>
         </div> 
