--- a/app/Parts.html
+++ b/app/Parts.html
@@ -3,17 +3,17 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<script src="/dist/js/vendor.js"></script>
-	<link rel="stylesheet" href="/dist/css/vendor.css">
-	<link href="https://fonts.googleapis.com/css2?family=Nunito+Sans&display=swap" rel="stylesheet">
+	<script src="https://2020.igem.org/Template:Waterloo/js/vendor?action=raw&ctype=text/javascript"></script>
+	<link rel="stylesheet" href="https://2020.igem.org/Template:Waterloo/css/vendor?action=raw&ctype=text/css">
+	<link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;600;700;800;900&display=swap" rel="stylesheet">
 	<script>
 		$(function() {
-			$('header').load('/templates/header.html');
-			$('footer').load('/templates/footer.html');
+			$('header').load('https://2020.igem.org/Template:Waterloo/header?action=raw&ctype=text/javascript');
+			$('footer').load('https://2020.igem.org/Template:Waterloo/footer?action=raw&ctype=text/javascript');
 		});
 	</script>
-	<link rel="stylesheet" href="/css/styles.css">
-	<script src="/js/wiki.js"></script>
+	<link rel="stylesheet" type="text/css" href="https://2020.igem.org/wiki/index.php?title=Template:Waterloo/css/styles&action=raw&ctype=text/css">
+	<script src="https://2020.igem.org/Template:Waterloo/js/wiki?action=raw&ctype=text/javascript"></script>
 	<!--Added MathJax hack to make inline equations work-->
 	<script type="text/x-mathjax-config">
 		MathJax.Hub.Config({
@@ -31,15 +31,93 @@
 	<header></header>
     <main id="top">
 		<article>
-			<h1> PARTS </h1>
+			<div class="pageHeader"> 
+				<div class="headerCol">
+					<h1> PARTS </h1>
+				</div> 
+				<div class="headerCol2">
+					<img src='/images/buildings.svg'>
+				</div>
+			</div>
 
-			<p> Each team will make new parts during iGEM and will submit them to the Registry of Standard Biological Parts. The iGEM software provides an easy way to present the parts your team has created. </p>
-
-			<p> Remember that the goal of proper part documentation is to describe and define a part, so that it can be used without needing to refer to the primary literature. Registry users in future years should be able to read your documentation and be able to use the part successfully. Also, you should provide proper references to acknowledge previous authors and to provide for users who wish to know more. </p>
+			<div class='text'>
+				<p>This year, our team added seven new parts, contributed new documentation to three parts, and improved an existing part on the registry. Below are links to the registry pages of each of those parts.</p>
+				<table>
+					<thead>
+						<tr>
+							<th>Part Name</th>
+							<th>Part Type</th>
+							<th>Description</th>
+							<th>Medal Criterion</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<td><a href="http://parts.igem.org/Part:BBa_K3381000">BBa_K3381000</a></td>
+							<td>Coding</td>
+							<td>FutA1 (iron-binding)</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td><a href="http://parts.igem.org/Part:BBa_K3381001">BBa_K3381001</a></td>
+							<td>Coding</td>
+							<td>FutA2 (iron-binding)</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td><a href="http://parts.igem.org/Part:BBa_K3381002">BBa_K3381002</a></td>
+							<td>Coding</td>
+							<td>Mst-CopC (copper-binding)</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td><a href="http://parts.igem.org/Part:BBa_K3381003">BBa_K3381003</a></td>
+							<td>Coding</td>
+							<td>FutA1-CBM2a</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td><a href="http://parts.igem.org/Part:BBa_K3381004">BBa_K3381004</a></td>
+							<td>Coding</td>
+							<td>FutA2-CBM2a</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td><a href="http://parts.igem.org/Part:BBa_K3381005">BBa_K3381005</a></td>
+							<td>Coding</td>
+							<td>Mst-CopC-CBM2a</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td><a href="http://parts.igem.org/Part:BBa_K3381006">BBa_K3381006</a></td>
+							<td>Coding</td>
+							<td>Improved Mst-CopC</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td><a href="http://parts.igem.org/Part:BBa_K1189024">BBa_K1189024</a></td>
+							<td>Coding</td>
+							<td>Light chain human ferritin</td>
+							<td>Bronze #4 Contribution</td>
+						</tr>
+						<tr>
+							<td><a href="http://parts.igem.org/Part:BBa_K1189024">BBa_K1189024</a></td>
+							<td>Coding</td>
+							<td>Heavy chain human ferritin</td>
+							<td>Bronze #4 Contribution</td>
+						</tr>
+						<tr>
+							<td><a href="http://parts.igem.org/Part:BBa_K863101">BBa_K863101</a></td>
+							<td>Protein-Domain</td>
+							<td>Cellulose binding Domain of Cellulomonas Fimi Exoglucanse (Freiburg-Standard)</td>
+							<td></td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
 		</article>
     </main>
   <footer></footer>
 </body>
 </html>
-
 
