--- a/app/Team.html
+++ b/app/Team.html
@@ -3,17 +3,17 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<script src="/dist/js/vendor.js"></script>
-	<link rel="stylesheet" href="/dist/css/vendor.css">
-	<link href="https://fonts.googleapis.com/css2?family=Nunito+Sans&display=swap" rel="stylesheet">
+	<script src="https://2020.igem.org/Template:Waterloo/js/vendor?action=raw&ctype=text/javascript"></script>
+	<link rel="stylesheet" href="https://2020.igem.org/Template:Waterloo/css/vendor?action=raw&ctype=text/css">
+	<link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;600;700;800;900&display=swap" rel="stylesheet">
 	<script>
 		$(function() {
-			$('header').load('/templates/header.html');
-			$('footer').load('/templates/footer.html');
+			$('header').load('https://2020.igem.org/Template:Waterloo/header?action=raw&ctype=text/javascript');
+			$('footer').load('https://2020.igem.org/Template:Waterloo/footer?action=raw&ctype=text/javascript');
 		});
 	</script>
-	<link rel="stylesheet" href="/css/styles.css">
-	<script src="/js/wiki.js"></script>
+	<link rel="stylesheet" type="text/css" href="https://2020.igem.org/wiki/index.php?title=Template:Waterloo/css/styles&action=raw&ctype=text/css">
+	<script src="https://2020.igem.org/Template:Waterloo/js/wiki?action=raw&ctype=text/javascript"></script>
 	<!--Added MathJax hack to make inline equations work-->
 	<script type="text/x-mathjax-config">
 		MathJax.Hub.Config({
@@ -88,13 +88,13 @@
 							<img id='teammate' src='/images/alexchan.png'>
 						</div>
 						<div class="col">
-							<img id='teammate' src='/images/alinaarvisais.png' onmouseover="this.src='/images/sillyalinaarvisais.png';" onmouseout="this.src='/images/alinaarvisais.png';"/>
+							<img id='teammate' src='/images/alinaarvisais.png' onmouseover="this.src='https://2020.igem.org/wiki/images/8/8c/T--Waterloo--2020_sillyalinaarvisais.png';" onmouseout="this.src='https://2020.igem.org/wiki/images/8/8c/T--Waterloo--2020_alinaarvisais.png';"/>
 						</div>
 						<div class="col">
-							<img id='teammate' src='/images/anthonydang.png' onmouseover="this.src='/images/sillyanthonydang.png';" onmouseout="this.src='/images/anthonydang.png';"/>
+							<img id='teammate' src='/images/anthonydang.png' onmouseover="this.src='https://2020.igem.org/wiki/images/8/8c/T--Waterloo--2020_sillyanthonydang.png';" onmouseout="this.src='https://2020.igem.org/wiki/images/8/8c/T--Waterloo--2020_anthonydang.png';"/>
 						</div>
 						<div class="col">
-							<img id='teammate' src='/images/braedenmacdougall.png' onmouseover="this.src='/images/sillybraedenmacdougall.png';" onmouseout="this.src='/images/braedenmacdougall.png';"/>
+							<img id='teammate' src='/images/braedenmacdougall.png' onmouseover="this.src='https://2020.igem.org/wiki/images/8/8c/T--Waterloo--2020_sillybraedenmacdougall.png';" onmouseout="this.src='https://2020.igem.org/wiki/images/8/8c/T--Waterloo--2020_braedenmacdougall.png';"/>
 						</div>
 					</div>
 					<div class="row">
@@ -159,16 +159,16 @@
 				<div class="accordion">
 					<div class="row">
 						<div class="col">
-							<img id='teammate' src='/images/fatimaanwar.png' onmouseover="this.src='/images/sillyfatimaanwar.png';" onmouseout="this.src='/images/fatimaanwar.png';"/>
+							<img id='teammate' src='/images/fatimaanwar.png' onmouseover="this.src='https://2020.igem.org/wiki/images/8/8c/T--Waterloo--2020_sillyfatimaanwar.png';" onmouseout="this.src='https://2020.igem.org/wiki/images/8/8c/T--Waterloo--2020_fatimaanwar.png';"/>
 						</div>
 						<div class="col">
 							<img id='teammate' src='/images/genevievebelford.png'>
 						</div>
 						<div class="col">
-							<img id='teammate' src='/images/jeriannhsiao.png' onmouseover="this.src='/images/sillyjeriannhsiao.png';" onmouseout="this.src='/images/jeriannhsiao.png';"/>
+							<img id='teammate' src='/images/jeriannhsiao.png' onmouseover="this.src='https://2020.igem.org/wiki/images/8/8c/T--Waterloo--2020_sillyjeriannhsiao.png';" onmouseout="this.src='https://2020.igem.org/wiki/images/8/8c/T--Waterloo--2020_jeriannhsiao.png';"/>
 						</div>
 						<div class="col">
-							<img id='teammate' src='/images/joshuahanneson.png' onmouseover="this.src='/images/sillyjoshuahanneson.png';" onmouseout="this.src='/images/joshuahanneson.png';"/>
+							<img id='teammate' src='/images/joshuahanneson.png' onmouseover="this.src='https://2020.igem.org/wiki/images/8/8c/T--Waterloo--2020_sillyjoshuahanneson.png';" onmouseout="this.src='https://2020.igem.org/wiki/images/8/8c/T--Waterloo--2020_joshuahanneson.png';"/>
 						</div>
 					</div>
 					<div class="row">
@@ -234,7 +234,7 @@
 							<img id='teammate' src='/images/katiewalker.png'/>
 						</div>
 						<div class="col">
-							<img id='teammate' src='/images/lorenzoperez.png' onmouseover="this.src='/images/sillylorenzoperez.png';" onmouseout="this.src='/images/lorenzopérez.png';"/>
+							<img id='teammate' src='/images/lorenzoperez.png' onmouseover="this.src='https://2020.igem.org/wiki/images/8/8c/T--Waterloo--2020_sillylorenzoperez.png';" onmouseout="this.src='https://2020.igem.org/wiki/images/8/8c/T--Waterloo--2020_lorenzopérez.png';"/>
 						</div>
 						<div class="col">
 							<img id='teammate' src='/images/michaellam.png'/>
@@ -302,16 +302,16 @@
 				<div class="accordion">
 					<div class="row">
 						<div class="col">
-							<img id='teammate' src='/images/renessagomes.png' onmouseover="this.src='/images/sillyrenessagomes.png';" onmouseout="this.src='/images/renessagomes.png';"/>
+							<img id='teammate' src='/images/renessagomes.png' onmouseover="this.src='https://2020.igem.org/wiki/images/8/8c/T--Waterloo--2020_sillyrenessagomes.png';" onmouseout="this.src='https://2020.igem.org/wiki/images/8/8c/T--Waterloo--2020_renessagomes.png';"/>
 						</div>
 						<div class="col">
-							<img id='teammate' src='/images/rileyhenderson.png' onmouseover="this.src='/images/sillyrileyhenderson.png';" onmouseout="this.src='/images/rileyhenderson.png';"/>
+							<img id='teammate' src='/images/rileyhenderson.png' onmouseover="this.src='https://2020.igem.org/wiki/images/8/8c/T--Waterloo--2020_sillyrileyhenderson.png';" onmouseout="this.src='https://2020.igem.org/wiki/images/8/8c/T--Waterloo--2020_rileyhenderson.png';"/>
 						</div>
 						<div class="col">
-							<img id='teammate' src='/images/sarahhardy.png' onmouseover="this.src='/images/sillysarahhardy.png';" onmouseout="this.src='/images/sarahhardy.png';"/>
+							<img id='teammate' src='/images/sarahhardy.png' onmouseover="this.src='https://2020.igem.org/wiki/images/8/8c/T--Waterloo--2020_sillysarahhardy.png';" onmouseout="this.src='https://2020.igem.org/wiki/images/8/8c/T--Waterloo--2020_sarahhardy.png';"/>
 						</div>
 						<div class="col">
-							<img id='teammate' src='/images/shivnaik.png' onmouseover="this.src='/images/sillyshivnaik.png';" onmouseout="this.src='/images/shivnaik.png';"/>
+							<img id='teammate' src='/images/shivnaik.png' onmouseover="this.src='https://2020.igem.org/wiki/images/8/8c/T--Waterloo--2020_sillyshivnaik.png';" onmouseout="this.src='https://2020.igem.org/wiki/images/8/8c/T--Waterloo--2020_shivnaik.png';"/>
 						</div>
 					</div>
 					<div class="row">
@@ -412,16 +412,16 @@
 				<div class="accordion">
 					<div class="row">
 						<div class="col">
-							<img id='teammate' src='/images/alishadsouza.png' onmouseover="this.src='/images/sillyalishadsouza.png';" onmouseout="this.src='/images/alishadsouza.png';"/>
+							<img id='teammate' src='/images/alishadsouza.png' onmouseover="this.src='https://2020.igem.org/wiki/images/8/8c/T--Waterloo--2020_sillyalishadsouza.png';" onmouseout="this.src='https://2020.igem.org/wiki/images/8/8c/T--Waterloo--2020_alishadsouza.png';"/>
 						</div>
 						<div class="col">
-							<img id='teammate' src='/images/anafernandez.png' onmouseover="this.src='/images/sillyanafernandez.png';" onmouseout="this.src='/images/anafernandez.png';"/>
+							<img id='teammate' src='/images/anafernandez.png' onmouseover="this.src='https://2020.igem.org/wiki/images/8/8c/T--Waterloo--2020_sillyanafernandez.png';" onmouseout="this.src='https://2020.igem.org/wiki/images/8/8c/T--Waterloo--2020_anafernandez.png';"/>
 						</div>
 						<div class="col">
-							<img id='teammate' src='/images/christiansingh.png' onmouseover="this.src='/images/sillychristiansingh.png';" onmouseout="this.src='/images/christiansingh.png';"/>
+							<img id='teammate' src='/images/christiansingh.png' onmouseover="this.src='https://2020.igem.org/wiki/images/8/8c/T--Waterloo--2020_sillychristiansingh.png';" onmouseout="this.src='https://2020.igem.org/wiki/images/8/8c/T--Waterloo--2020_christiansingh.png';"/>
 						</div>
 						<div class="col">
-							<img id='teammate' src='/images/clarereid.png' onmouseover="this.src='/images/sillyclarereid.png';" onmouseout="this.src='/images/clarereid.png';"/>
+							<img id='teammate' src='/images/clarereid.png' onmouseover="this.src='https://2020.igem.org/wiki/images/8/8c/T--Waterloo--2020_sillyclarereid.png';" onmouseout="this.src='https://2020.igem.org/wiki/images/8/8c/T--Waterloo--2020_clarereid.png';"/>
 						</div>
 					</div>
 					<div class="row">
@@ -489,10 +489,10 @@
 							<img id='teammate' src='/images/jamesstapleton.png'>
 						</div>
 						<div class="col">
-							<img id='teammate' src='/images/patrickthomas.png' onmouseover="this.src='/images/sillypatrickthomas.png';" onmouseout="this.src='/images/patrickthomas.png';"/>
+							<img id='teammate' src='/images/patrickthomas.png' onmouseover="this.src='https://2020.igem.org/wiki/images/8/8c/T--Waterloo--2020_sillypatrickthomas.png';" onmouseout="this.src='https://2020.igem.org/wiki/images/8/8c/T--Waterloo--2020_patrickthomas.png';"/>
 						</div>
 						<div class="col">
-							<img id='teammate' src='/images/taranlayal.png' onmouseover="this.src='/images/sillytaranlayal.png';" onmouseout="this.src='/images/taranlayal.png';"/>
+							<img id='teammate' src='/images/taranlayal.png' onmouseover="this.src='https://2020.igem.org/wiki/images/8/8c/T--Waterloo--2020_sillytaranlayal.png';" onmouseout="this.src='https://2020.igem.org/wiki/images/8/8c/T--Waterloo--2020_taranlayal.png';"/>
 						</div>
 					</div>
 					<div class="row">
@@ -631,7 +631,7 @@
 							<img id='teammate' src='/images/francoislemesre.png'>
 						</div>
 						<div class="col">
-							<img id='teammate' src='/images/geraldlee.png' onmouseover="this.src='/images/sillygeraldlee.png';" onmouseout="this.src='/images/geraldlee.png';"/>
+							<img id='teammate' src='/images/geraldlee.png' onmouseover="this.src='https://2020.igem.org/wiki/images/8/8c/T--Waterloo--2020_sillygeraldlee.png';" onmouseout="this.src='https://2020.igem.org/wiki/images/8/8c/T--Waterloo--2020_geraldlee.png';"/>
 						</div>
 						<div class="col">
 							<img id='teammate' src='/images/helenengelhardt.png'/>
@@ -704,7 +704,7 @@
 							<img id='teammate' src='/images/kingsleywong.png'>
 						</div>
 						<div class="col">
-							<img id='teammate' src='/images/michaelastwood.png' onmouseover="this.src='/images/sillymichaelastwood.png';" onmouseout="this.src='/images/michaelastwood.png';"/>
+							<img id='teammate' src='/images/michaelastwood.png' onmouseover="this.src='https://2020.igem.org/wiki/images/8/8c/T--Waterloo--2020_sillymichaelastwood.png';" onmouseout="this.src='https://2020.igem.org/wiki/images/8/8c/T--Waterloo--2020_michaelastwood.png';"/>
 						</div>
 						<div class="col">
 							<img id='teammate' src='/images/sergiupocol.png'>
@@ -768,7 +768,7 @@
 				<div class="accordion">
 					<div class="row">
 						<div class="col">
-							<img id='teammate' src='/images/teodoravujovic.png' onmouseover="this.src='/images/sillyteodoravujovic.png';" onmouseout="this.src='/images/teodoravujovic.png';"/>
+							<img id='teammate' src='/images/teodoravujovic.png' onmouseover="this.src='https://2020.igem.org/wiki/images/8/8c/T--Waterloo--2020_sillyteodoravujovic.png';" onmouseout="this.src='https://2020.igem.org/wiki/images/8/8c/T--Waterloo--2020_teodoravujovic.png';"/>
 						</div>
 						<div class="col"></div>
 						<div class="col"></div>
@@ -803,5 +803,3 @@
   <footer></footer>
 </body>
 </html>
-
-
