--- a/app/Contribution.html
+++ b/app/Contribution.html
@@ -3,17 +3,17 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<script src="/dist/js/vendor.js"></script>
-	<link rel="stylesheet" href="/dist/css/vendor.css">
-	<link href="https://fonts.googleapis.com/css2?family=Nunito+Sans&display=swap" rel="stylesheet">
+	<script src="https://2020.igem.org/Template:Waterloo/js/vendor?action=raw&ctype=text/javascript"></script>
+	<link rel="stylesheet" href="https://2020.igem.org/Template:Waterloo/css/vendor?action=raw&ctype=text/css">
+	<link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;600;700;800;900&display=swap" rel="stylesheet">
 	<script>
 		$(function() {
-			$('header').load('/templates/header.html');
-			$('footer').load('/templates/footer.html');
+			$('header').load('https://2020.igem.org/Template:Waterloo/header?action=raw&ctype=text/javascript');
+			$('footer').load('https://2020.igem.org/Template:Waterloo/footer?action=raw&ctype=text/javascript');
 		});
 	</script>
-	<link rel="stylesheet" href="/css/styles.css">
-	<script src="/js/wiki.js"></script>
+	<link rel="stylesheet" type="text/css" href="https://2020.igem.org/wiki/index.php?title=Template:Waterloo/css/styles&action=raw&ctype=text/css">
+	<script src="https://2020.igem.org/Template:Waterloo/js/wiki?action=raw&ctype=text/javascript"></script>
 	<!--Added MathJax hack to make inline equations work-->
 	<script type="text/x-mathjax-config">
 		MathJax.Hub.Config({
@@ -31,11 +31,19 @@
 	<header></header>
     <main id="top">
 		<article>
-			<h1> CONTRIBUTION </h1>
+			<div class="pageHeader"> 
+				<div class="headerCol">
+					<h1> CONTRIBUTION </h1>
+				</div> 
+				<div class="headerCol2">
+					<img src='/images/buildings.svg'>
+				</div>
+			</div>
 
-			<p> A basic part is a functional unit of DNA that cannot be subdivided into smaller component parts. BBa_R0051 is an example of a basic part, a promoter regulated by lambda cl. </p>
+			<div class='text'>
+				<p>To meet bronze medal #4, we added documentation to parts <a href="http://parts.igem.org/Part:BBa_K863101">BBa_K863101</a>, <a href="http://parts.igem.org/Part:BBa_K1189024">BBa_K1189024</a>, and <a href="http://parts.igem.org/Part:BBa_K1189025">BBa_K1189025</a>. We focused on characterizing their structure and function more thoroughly.</p>
+			</div>
 
-			<p> Most genetically-encoded functions have not yet been converted to BioBrick parts. Thus, there are many opportunities to find new, cool, and important genetically encoded functions, and refine and convert the DNA encoding these functions into BioBrick standard biological parts. </p>
 		</article>
     </main>
   <footer></footer>
